add script in dark&light mode

--- a/ex/DarkandLightmode/index.html
+++ b/ex/DarkandLightmode/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="them-switch-container">
         <span id="toggle-icon">
-            <span class="toggle-text">light mode</span>
-            <i class="fa-solid fa-sun"></i>
+            <span class="toggle-text">Light mode</span>
+            <i class="fas fa-sun"></i>
         </span>
         <span id="toggle-icon">
-            <span class="toggle-text">Dark mode</span>
-            <i class="fa-solid fa-moon"></i>
+            <!-- <span class="toggle-text"></span> -->
+            <!-- <i class="fa-solid fa-moon"></i> -->
         </span>
         <label class="them-switch">
             <input type="checkbox" >
@@ -34,7 +34,7 @@
     <section id="home">
         <div class="title-group">
             <h1>SuperJane ProDev</h1>
-            <h2>Wed deverloper</h2>
+            <h2>Wed developer</h2>
         </div>
     </section>
     <section id="project">
