add finished dark&light mode

--- a/ex/DarkandLightmode/index.html
+++ b/ex/DarkandLightmode/index.html
@@ -24,12 +24,12 @@
         </label>
     </div>
     <nav id="nav">
-        <a href="#home">Home</a>
         <i class="fa-solid fa-house"></i>
-        <a href="#project">Project</a>
+        <a href="#home">Home</a>
         <i class="fa-solid fa-book"></i>
-        <a href="#contact">Contact</a>
+        <a href="#project">Project</a>
         <i class="fa-solid fa-address-book"></i>
+        <a href="#contact">Contact</a>
     </nav>
     <section id="home">
         <div class="title-group">
@@ -38,9 +38,35 @@
         </div>
     </section>
     <section id="project">
-        
+            <h1>My Project</h1>
+            <div class="project-container">
+                <div class="img-container">
+                    <h2>Wed site A</h2>
+                    <figure>
+                        <img id="img1" src="/DarkandLightmode/img/undraw_website_light.svg" alt="wedsite">
+                    </figure>
+                </div>
+                <div class="img-container">
+                    <h2>Wed site B</h2>
+                    <figure>
+                        <img id="img2" src="/DarkandLightmode/img/undraw_freelancer_light.svg" alt="freelance">
+                    </figure>
+                </div>
+                <div class="img-container">
+                    <h2>Wed site C</h2>
+                    <figure>
+                        <img id="img3" src="/DarkandLightmode/img/undraw_projections_light.svg" alt="project">
+                    </figure>
+                </div>
+            </div>
     </section>
     <section id="contact">
+        <div class="social-icaon">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-github"></i>
+            <i class="fab fa-linkedin"></i>
+        </div>
 
     </section>
 
